// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-mobile"
    >
      Expenses
    </div>
    <div
      className="visible-desktop"
    >
      Expense
    </div>
    <div
      className="visible-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-mobile"
    >
      Expenses
    </div>
    <div
      className="visible-desktop"
    >
      Expense
    </div>
    <div
      className="visible-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpensesListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      notes=""
    />
    <ExpensesListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      notes=""
    />
    <ExpensesListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      notes=""
    />
  </div>
</div>
`;
